<resources>
    <string name="app_name">Protector Marine Shield</string>

    <!-- Strings related to login -->
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_password">Forgot password</string>
    <string name="Username">Username</string>
    <string name="action_sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="register">Register</string>
    <string name="prompt_password">Password</string>
    <string name="send">Send</string>
    <string name="back_button">Back</string>
    <string name="email_prompt">Please type your email address:</string>
    <string name="cloud_upload">Cloud_upload</string>
    <string name="username">Username</string>

    <!-- Strings related to errors -->
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_invalid_register_password">password should be at least 6 digit length</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>


    <!-- Strings related to Image Buttons-->
    <string name="camera_image_button">Take picture</string>
    <string name="mail_image_button">Send mail</string>
    <string name="cloud_image_button">Upload</string>
    <string name="back_image_button">Back</string>

    <!-- Strings related to table data -->
    <string name="comment">Comments</string>
    <string name="instruction">Instruction</string>
    <string name="table_header_status">Status</string>

    <!-- Strings related to maintenance spinner options -->
    <string-array name="vessel_choose">
        <item>Protector</item>
        <item>Stalker</item>
        <item>Toplite</item>
        <item>Imilite</item>
    </string-array>

    <string-array name="vessel_id">
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
    </string-array>

    <string-array name="vessel_site">
        <item>Dos Bocas</item>
        <item>Frontera</item>
        <item>Ciudad Del Carmen</item>
    </string-array>

    <!-- ***********************************  Weekly Preventive Maintenance  *********************************** -->
    <string name="weekly_maintenance">Weekly maintenance</string>
    <!-- 1st Headline -->
    <string name="weekly_headline_1">USV Protector Boat – Weekly</string>
    <!-- 1st Content -->
    <string name="weekly_1_1">Perform visual inspection of all USV deck assemblies. Pay special
                              attention to the transom.</string>
    <string name="weekly_1_2">Check the integrity of the grounding cable.</string>
    <string name="weekly_1_3">Check the lifting eyes for bumps and corrosion especially the
                                connections to the deck.</string>
    <string name="weekly_1_4">Verify that the railing cables are not cracked, rust and intact. Apply
                                Silicon grease or replace cable if necessary.</string>
    <string name="weekly_1_5">Check the integrity of the USV hull to detect cracks and bumps.</string>
    <string name="weekly_1_6">Verify that both engines and WCS seawater inlets are intact and clean.</string>
    <string name="weekly_1_7">Perform visual inspection to all zincs at the transom. Replace if the zinc is less than 50% from its original size.</string>
    <string name="weekly_1_8">Verify that the rubber seals of all hatches are not cracked and intact. Apply Silicon grease and repair if necessary.</string>
    <string name="weekly_1_9">Clean the Hatches safety pistons with WD40.Tighten all pistons screws and verify that all the safety pins are in place.
                            Verify all safety rings of hatch node are in place. Clean them if necessary.</string>
    <string name="weekly_1_10">Verify all drainage pipes are secured by two bands, add if necessary. Clean all pipe lines.</string>
    <string name="weekly_1_11">Verify double metal band tighten on all the flexible hoses connections.</string>
    <string name="weekly_1_12">Clean the Boat Control Cabinet displays and panels using a soaked mop.</string>
    <string name="weekly_1_13">Visually inspect control levers for corrosion. Clean if necessary.</string>
    <string name="weekly_1_14">    Clean C2 compartments:
                          Remove all external equipment from the Boat Control Cabinet and the Crew Cabinet.
                             Wash the salt of the Boat Control Cabinet and the Crew Cabinet using fresh water hose set to 2-3 atm.
                            Wash all marine equipment, including life vests.
                            Dry the compartments.</string>
    <string name="weekly_1_15">Wash the Engine compartment with fresh water and bilge soap with caution for electrical connections.
                            Dry the Engine compartment completely.</string>
    <string name="weekly_1_16">Wash and dry the cargo pit covers.</string>
    <string name="weekly_1_17">Clean the outside of the hull using soap and a brush. Give special notice to the transom as it is catching the exhaust gases.</string>
    <string name="weekly_1_18">Clean the boat deck using soap and water.</string>
    <string name="weekly_1_19">Clean the electronic boxes in the cargo pit from salt using a moist mop, Verify that the Electronics Cabinet covers are secured to its place.</string>

    <!-- 2st Headline -->
    <string name="weekly_headline_2">Fuel System – Weekly</string>
    <!-- 2st Content -->
    <string name="weekly_2_1">Compare the amount of fuel reported in the Maretron display to the amount recorded in the ship log. Write down the lifetime fuel consumption on the report.</string>
    <string name="weekly_2_2">Check the fuel hoses in the engine compartments for corrosion. If needed, apply Molykote 33 Light grease/LOCTITE Marine Grade Anti-Seize on the hoses connections.</string>
    <string name="weekly_2_3">Drain some fuel from the separator (a cork at the bottom of the transparent tank) and visually inspect the fuel using a clean bottle.
                                <b>CAUTION</b>
                                Presence of water or excessive contamination in the fuel disqualifies it from use.
                                </string>


    <!-- ***********************************  Power-Up procedure Preventive Maintenance  *********************************** -->
    <string name="power_up_procedure">Power Up procedure</string>


</resources>
