<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.erana.protectormaintenance.MainActivity">

    <ImageButton
        android:id="@+id/cloud_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="?android:attr/windowBackground"
        android:contentDescription="@string/cloud_image_button"
        app:layout_constraintBottom_toTopOf="@+id/header_row"
        app:layout_constraintStart_toEndOf="@+id/mail_button"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icons8_upload_to_cloud_big"/>

    <ImageButton
        android:id="@+id/mail_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="?android:attr/windowBackground"
        android:contentDescription="@string/mail_image_button"
        app:layout_constraintBottom_toTopOf="@+id/list_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/icons8_message_big"/>

    <TextView
        android:id="@+id/header_row"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/weekly_headline_1"
        android:textAlignment="textStart"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mail_button"/>

    <TextView
        android:id="@+id/instruction_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@color/header_row"
        android:paddingStart="6dp"
        android:text="@string/instruction"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/list_view"
        app:layout_constraintEnd_toStartOf="@+id/status_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_row"
        app:layout_constraintVertical_bias="0.0"/>

    <TextView
        android:id="@+id/status_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@color/header_row"
        android:text="@string/table_header_status"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/list_view"
        app:layout_constraintEnd_toStartOf="@+id/comment_info"
        app:layout_constraintStart_toStartOf="@+id/instruction_info"
        app:layout_constraintTop_toBottomOf="@+id/header_row"
        app:layout_constraintVertical_bias="0.0"/>

    <TextView
        android:id="@+id/comment_info"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@color/header_row"
        android:paddingStart="6dp"
        android:text="@string/comment"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/list_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/status_info"
        app:layout_constraintTop_toBottomOf="@+id/header_row"
        app:layout_constraintVertical_bias="0.0"/>

    <ListView
        android:id="@+id/list_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instruction_info"
        />

</android.support.constraint.ConstraintLayout>
